fix layout bugs for checkbox and forgotpassword

--- a/Userlogin/style.css
+++ b/Userlogin/style.css
@@ -141,25 +141,38 @@ h4 {
     outline: none;
 }
 
-.input-box2 {
-    display: flex; 
-    align-items: center; 
-    justify-content: flex-start; 
-    margin-top: 20px; 
+.input-box2, .input-box3 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;  /* 在父容器内居中 */
+    font-size: 13px;
+    font-weight: bold;
 }
 
 .checkbox {
-    margin-left: 762px; 
-    vertical-align: middle; 
-    cursor: pointer;
+    margin: 0;
+    padding: 0 10px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.forgot-password {
+    font-size: 13px;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
 }
 
 label {
+    display: flex;
     font-size: 13px; 
     font-weight: bold;
     color: black; 
     vertical-align: middle; 
-    margin-left: 4px;
+    margin-right: auto; 
 }
 
 .needhelp {
@@ -185,25 +198,6 @@ label {
     width: 400px;
     margin: 20px auto; 
     font-size: 14px; 
-}
-
-.forgot-password {
-    margin-right: 755px;
-    font-weight: bold;
-    font-size: 13px; 
-    color: black;
-    text-decoration: none;
-    margin-left: auto;
-}
-
-.input-box3 {
-    font-size: 13px;
-    font-weight: bold;
-    margin-top: 8px;
-    margin-left: 762px; 
-    vertical-align: middle; 
-    color: black;
-    cursor: pointer;
 }
 
 .input-box4 {
